--- a/composer.json
+++ b/composer.json
@@ -4,26 +4,30 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "keboola/php-component": "^8.1"
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.5",
+        "keboola/csv": "^2.1",
+        "keboola/php-component": "^8.1",
+        "symfony/config": "^5.0"
     },
     "require-dev": {
-        "jakub-onderka/php-parallel-lint": "^1.0",
         "keboola/coding-standard": ">=7.0.2",
         "keboola/datadir-tests": "^4.0",
         "keboola/php-temp": "^2.0",
+        "php-parallel-lint/php-parallel-lint": "^1.2",
         "phpstan/phpstan": "^0.12.14",
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^5.0"
     },
     "autoload": {
         "psr-4": {
-            "MyComponent\\": "src/"
+            "Keboola\\SiSenseWriter\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "MyComponent\\Tests\\": "tests/phpunit/",
-            "MyComponent\\FunctionalTests\\": "tests/functional/"
+            "Keboola\\SiSenseWriter\\Tests\\": "tests/phpunit/",
+            "Keboola\\SiSenseWriter\\FunctionalTests\\": "tests/functional/"
         }
     },
     "scripts": {
